# Yoru

./: .gitmodules  CMakeLists.txt  README.md
src/: CMakeLists.txt
src/ext/: CMakeLists.txt  ext.cpp
src/yoru/: main.cpp
src/yoru/as/: AS.h  Embree.cpp  EmbreeAS.cpp  EmbreeAS.h  NaiveAS.h
src/yoru/base/: BoundingBox.cpp  BoundingBox.h  Common.h  Frame.h  Intersection.h  Ray.h  Transform.cpp  Transform.h  Vector.h
src/yoru/camera/: Camera.cpp  Camera.h
src/yoru/color/: Spectrum.h
src/yoru/film/: Film.cpp  Film.h
src/yoru/filter/: BoxFilter.cpp  BoxFilter.h  Filter.cpp  Filter.h  MitchellFilter.h  TriangleFilter.h
src/yoru/integrator/: Integrator.cpp  Integrator.h  NormalIntegrator.cpp  NormalIntegrator.h
src/yoru/light/: AreaLight.cpp  AreaLight.h  DistanceLight.h  Light.cpp  Light.h  PointLight.cpp  PointLight.h
src/yoru/material/: DiffuseMaterial.cpp  DiffuseMaterial.h  Material.cpp  Material.h
src/yoru/material/BxDF/: BxDF.h  LambertianBRDF.cpp  LambertianBRDF.h
src/yoru/primitive/: GeometricPrimitive.cpp  GeometricPrimitive.h  Primitive.h  TransformedPrimitive.cpp  TransformedPrimitive.h
src/yoru/sampler/: IndependentSampler.cpp  IndependentSampler.h  Sampler.h  StratifiedSampler.cpp  StratifiedSampler.h
src/yoru/shape/: Shape.h  Sphere.cpp  Sphere.h  TriangleMesh.cpp  TriangleMesh.h
src/yoru/texture/: ImageTextures.h  Textures.cpp  Textures.h
src/yoru/utils/: BufferCache.cpp  BufferCache.h  Hash.h  Parallelism.cpp  Parallelism.h  RNG.h  Sampling.cpp  Sampling.h  Util.h
